--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Este es mi portafolio">
   <meta name="robots" content="index, follow">
-  <link rel="stylesheet" href="./style.css">  
+  <link rel="stylesheet" href="./css/style.css">  
+  <link rel="stylesheet" href="./css/tablet.css" media="(min-width: 768px)">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,700&display=swap" rel="stylesheet">
   <title>Mi portafolio</title>
@@ -44,8 +45,8 @@
       <h3>Encuentrame en redes</h3>
     </div>
     <figure>
-      <img src="../Imagenes/icons/SVG/github.svg" alt="logo de github">
-      <img src="../Imagenes/icons/SVG/instagram.svg" alt="logo de instagram">
+      <a href="https://github.com/Darudaniel"><img src="./assets/icons/SVG/github.svg" alt="logo de github" ></a>
+      <a href="https://www.instagram.com/danielruizen/"><img src="./assets/icons/SVG/instagram.svg" alt="logo de instagram"></a>
     </figure>
   </footer>
 </body>
