--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="robots" content="index, follow">
   <link rel="stylesheet" href="./css/style.css">  
   <link rel="stylesheet" href="./css/tablet.css" media="(min-width: 768px)">
+  <link rel="stylesheet" href="./css/desktop.css" media="(min-width: 1024px)">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,700&display=swap" rel="stylesheet">
   <title>Mi portafolio</title>
