Puse la web de batata 1 y puse el boton para visitarla online

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Este es mi portafolio">
   <meta name="robots" content="index, follow">
-  <link rel="stylesheet" href="./css/style.css">  
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/mobile480px.css" media="(min-width: 480px)">  
   <link rel="stylesheet" href="./css/tablet.css" media="(min-width: 768px)">
   <link rel="stylesheet" href="./css/desktop.css" media="(min-width: 1024px)">
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -20,9 +21,25 @@
   <main>
     <section id="projects" class="projects">
       <H2>Proyectos</H2> 
-        <ul>
-          <li>Pagina web #1</li>
-          <li>Pagina web #2</li>
+        <ul class="project--articles-container">
+          <li>
+            <article>
+              <h5>Batatabit</h5>
+              <p>Es una pagina web de una criptomoneda realizada para poner en practica los conocimientos aprendidos en platzi.com</p>
+              <figure>
+                <img src="./assets/imgs/muestracomprimida.gif" alt="Gif de la web de Batatabit">
+              </figure>
+              <a class="visit-site-button" href="https://darudaniel.github.io/Batatabit/index.html" target="_blank">Mirala online <span></span></a>
+            </article>
+          </li>
+          <!-- <li>
+            <article>
+              <h5>Batatabit</h5>
+              <figure>
+                <img src="./assets/imgs/muestracomprimida.gif" alt="Gif de la web de Batatabit">
+              </figure>
+            </article>
+          </li> -->
         </ul>
       
     </section>
