Ahora es responsive en mas pantallas

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <h2>Contactame</h2>
       <form action="">
         <label for="">
-          <span>Tu nomre</span><br>
+          <span>Tu nombre</span><br>
           <input type="text"><br>          
         </label> <br> <br> <br>
         <label for="">
