Cambie la imagen de presentacion de batatabit

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <h5>Batatabit</h5>
               <p>Es una pagina web de una criptomoneda realizada para poner en practica los conocimientos aprendidos en platzi.com</p>
               <figure>
-                <img src="./assets/imgs/muestracomprimida.gif" alt="Gif de la web de Batatabit">
+                <img src="./assets/imgs/batatabitmuestra-comprimida.jpg" alt="Gif de la web de Batatabit">
               </figure>
               <a class="visit-site-button" href="https://darudaniel.github.io/Batatabit/index.html" target="_blank">Mirala online <span></span></a>
             </article>
