Le puse texto al header

--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@
 </head>
 <body>
   <header>
-    <figure class="header--imgContainer"></figure>
+    <div class="header--header-container">
+      <figure class="header--imgContainer"></figure>
+        <div class="header--text-container">
+          <p>"No hay obstáculos imposibles, solo hay voluntades fuertes y débiles."</p>          
+          <p class="cite">-Julio verne</p>
+          <br>
+          <p>Quiero ayudarte con tu proyecto, solo contactame.</p>
+        </div>    
+    </div>
     <a href="#contact" class="header--button">Contactame <span></span></a>    
   </header>
   <main>
