Agregue estilos al texto del header

--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
     <div class="header--header-container">
       <figure class="header--imgContainer"></figure>
         <div class="header--text-container">
-          <p>"No hay obstáculos imposibles, solo hay voluntades fuertes y débiles."</p>          
-          <p class="cite">-Julio verne</p>
+          <div class="cite-container">
+            <p>"No hay obstáculos imposibles, solo hay voluntades fuertes y débiles."</p> 
+            <p class="cite">-Julio verne</p>
+          </div>         
+          
           <br>
-          <p>Quiero ayudarte con tu proyecto, solo contactame.</p>
+          <p class="CTA-text">Quiero ayudarte con tu proyecto, solo contactame.</p>
         </div>    
     </div>
     <a href="#contact" class="header--button">Contactame <span></span></a>    
