Hice un hero y le puse estilos, tambien hice responsive muchascosas de la version anterior

--- a/index.html
+++ b/index.html
@@ -16,8 +16,14 @@
 <body>
   <header>
     <div class="header--header-container">
-      <figure class="header--imgContainer"></figure>
-        <div class="header--text-container">
+      <div class="hero-container">
+        <figure class="header--imgContainer"></figure>
+        <div class="header--presentation">
+          <h3>Daniel Ruiz</h3>
+          <p>Junior <br> Web Developer</p>
+        </div>
+      </div>
+      <div class="header--text-container">
           <div class="cite-container">
             <p>"No hay obstáculos imposibles, solo hay voluntades fuertes y débiles."</p> 
             <p class="cite">-Julio verne</p>
@@ -25,7 +31,7 @@
           
           <br>
           <p class="CTA-text">Quiero ayudarte con tu proyecto, solo contactame.</p>
-        </div>    
+      </div>    
     </div>
     <a href="#contact" class="header--button">Contactame <span></span></a>    
   </header>
