hice responsive varios elementos del header

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <p class="cite">-Julio verne</p>
           </div>         
           
-          <br>
+          <br class="cite-space">
           <p class="CTA-text">Quiero ayudarte con tu proyecto, solo contactame.</p>
       </div>    
     </div>
